[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forkline"
version = "0.1.0"
description = "Replay-first tracing + deterministic replay + diffing for agentic workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Forkline Contributors" }
]

[tool.setuptools]
packages = ["forkline"]
